# brain-regions-2022

./: .gitignore  README.md  README_kedro.md  pyproject.toml  pyproject_kedro.toml  settings.ini
.github/workflows/: main.yml
docs/: Gemfile
docs/source/: conf.py  index.rst
src/: setup.py
src/tests/: test_run.py
src/your_project_name/: __init__.py  __main__.py  pipeline_registry.py  settings.py
