[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["anhoang <anhoang@wi.mit.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
plotly = "^5.5.0"
pandas = "^1.3.5"
karateclub = ^1.2.3

[tool.poetry.dev-dependencies]
nbdev = "^1.1.23"
jupyter = "^1.0.0"
kedro = "^0.17.6"
tqdm = "^4.62.3"
pydantic = "^1.8.2"
hydra-core = "^1.1.1"
copier = "^5.1.0"
fastcore = "^1.3.27"
rich = "^10.16.1"
nbconvert = "5.6.1"
jupyter-client = "6.1.2"
jupyterlab = "^3"
ipywidgets = "^7.6"

[tool.kedro]
package_name = "your_project_name"
project_name = "your_project_name"
project_version = "0.17.6"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/your_project_name -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
